@@ -1,3 +1,10 @@
+2009-11-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/ao_tasks.c:
+   Enable basic sorting of the columns.
+   Make the columns resizable.
+
+
 2009-11-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/ao_tasks.c:
